[tool.poetry]
name = "ideahunt"
version = "0.1.0"
description = ""
authors = ["Herrick Fang <herrickfang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-graphql = "^2.0.1"
graphene = "^2.1.8"
graphene-sqlalchemy = "^2.3.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
