[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "ideahunt"
version = "0.1.0"
description = ""
authors = ["Herrick Fang <herrickfang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-graphql = "^2.0.1"
graphene = "^2.1.8"
graphene-sqlalchemy = "^2.3.0"
gunicorn = "^20.0.4"
flask_sqlalchemy = "^2.4.4"
flask-login = "^0.5.0"
psycopg2-binary = "^2.8.6"
black = "^20.8b1"
isort = "^5.7.0"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^3.25.0"
Flask-Migrate = "^2.6.0"
mypy = "^0.812"
sqlalchemy-stubs = "^0.4"
graphene-stubs = "^0.15"
sqlalchemy = "1.3.23"
Flask-Sockets = "^0.2.1"
graphql-ws = "^0.3.1"
redis = "^3.5.3"
psycogreen = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
generate-schema="ideahunt.generate_schema:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
